--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>万念俱因果业障<br>
+    勤拭祛贪嗔痴慢</p></blockquote>
 
     <p>Hey，我是<strong>宸笙(照蕴)</strong>，一个SDK开发工程师。</p>
 
